1.22.2 (stable):

2012-11-10  Murray Cumming  <murrayc@murrayc.com>

        Update a test for the newer translations.

        * tests/test_document_load_translations.cc: Increase the number
	of expected translation locales and adapt to us having a 
	(mostly useless) en_GB translation.

2013-02-25  Murray Cumming  <murrayc@murrayc.com>

        Fix the build on Ubuntu Raring.

        * macros/macros/mm-python.m4: Also check in
        /usr/lib/i386-linux-gnu/ because that is where Ubuntu Raring
        (and maybe Debian) put libpython2.7 there.

2013-07-18  Murray Cumming  <murrayc@murrayc.com>

	Initial dialog: Fix crash with latest libxml.

	* glom/dialog_existing_or_new.cc: Catch exceptions from
	xmlpp::SaxParser::parse_chunk() because libxml nows
	returns an error code from xmlParserChunk when we call
	xmlStopParser(), which libxml++ then throws as an
	exception. Maybe libxml++ should not do that for that
	new error code.
	This is the libxml commit:
	https://git.gnome.org/browse/libxml2/commit/?id=e50ba8164eee06461c73cd8abb9b46aa0be81869

2013-06-10  Murray Cumming  <murrayc@murrayc.com>

	Initial dialog: Fix the notebook vertical expansion.

	* ui/operator/dialog_existing_or_new.glade: Set the 
	parent GtkHBox to expand, because there is some change
	of behaviour with the latest GTK+ from git master.
	Before this expanded already.

2012-11-22  Murray Cumming  <murrayc@murrayc.com>

        Tests: Use the locally-built glom.

	* configure.ac:
        * Makefile_tests.am:
	* tests/tests_glom_date_in_locales.sh.in:
	Generate tests/tests_glom_date_in_locales.sh from
	tests/tests_glom_date_in_locales.sh.in, so it can 
	include the path to the locally-built glom
	executable.

2012-11-22  Murray Cumming  <murrayc@murrayc.com>

        Tests: Use the locally-built python module.

        * Makefile_tests.am: Set the PYTHONPATH in
	automake's TESTS_ENVIRONMENT variable
	to fix make check before make install has run,
	and generally to be a correct check.
